start updating item meta
Things to note:
- JukeboxPlayableComponent#isShowInTooltip/setShowInTooltip are deprecated since
no longer available on the component. The alternative is either keep supporting item flag (by adding a new one)
or migrate to use the new data component API
- ItemFlag#HIDE_ADDITIONAL_TOOLTIP is deprecated, the new component tooltip_display allow to hide
component individually, using the flag on an item now will do exactly like mojang data fixer
providing backward compatibility by adding the components that would be hidden in a previous version
in the tooltip_display component