@@ -6,7 +6,7 @@ import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableMultimap;
 import com.google.common.collect.LinkedHashMultimap;
-import com.google.common.collect.ImmutableSortedMap; // Paper
+import com.google.common.collect.ImmutableSortedMap;
 import com.google.common.collect.Lists;
 import com.google.common.collect.Multimap;
 import com.google.common.collect.SetMultimap;
@@ -23,7 +23,7 @@ import java.util.ArrayList;
 import java.util.Base64;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.Comparator; // Paper
+import java.util.Comparator;
 import java.util.EnumSet;
 import java.util.HashMap;
 import java.util.Iterator;
@@ -34,10 +34,12 @@ import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.SequencedSet;
 import java.util.Set;
 import java.util.StringJoiner;
 import java.util.logging.Level;
 import java.util.logging.Logger;
+import it.unimi.dsi.fastutil.objects.ReferenceLinkedOpenHashSet;
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 import net.minecraft.core.Holder;
@@ -56,11 +58,11 @@ import net.minecraft.nbt.NbtOps;
 import net.minecraft.nbt.SnbtPrinterTagVisitor;
 import net.minecraft.network.chat.Component;
 import net.minecraft.resources.ResourceLocation;
-import net.minecraft.server.MinecraftServer;
 import net.minecraft.tags.TagKey;
 import net.minecraft.util.Unit;
 import net.minecraft.world.entity.EquipmentSlotGroup;
 import net.minecraft.world.food.FoodProperties;
+import net.minecraft.world.item.AdventureModePredicate;
 import net.minecraft.world.item.EitherHolder;
 import net.minecraft.world.item.JukeboxPlayable;
 import net.minecraft.world.item.JukeboxSongs;
@@ -72,7 +74,7 @@ import net.minecraft.world.item.component.DamageResistant;
 import net.minecraft.world.item.component.ItemAttributeModifiers;
 import net.minecraft.world.item.component.ItemLore;
 import net.minecraft.world.item.component.Tool;
-import net.minecraft.world.item.component.Unbreakable;
+import net.minecraft.world.item.component.TooltipDisplay;
 import net.minecraft.world.item.component.UseCooldown;
 import net.minecraft.world.item.component.UseRemainder;
 import net.minecraft.world.item.enchantment.Enchantable;
@@ -92,6 +94,7 @@ import org.bukkit.craftbukkit.CraftRegistry;
 import org.bukkit.craftbukkit.Overridden;
 import org.bukkit.craftbukkit.attribute.CraftAttribute;
 import org.bukkit.craftbukkit.attribute.CraftAttributeInstance;
+import org.bukkit.craftbukkit.attribute.CraftAttributeMap;
 import org.bukkit.craftbukkit.block.CraftBlockType;
 import org.bukkit.craftbukkit.block.data.CraftBlockData;
 import org.bukkit.craftbukkit.enchantments.CraftEnchantment;
@@ -202,7 +205,7 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
 
     static abstract class Applicator { // Paper - support updating profile after resolving it
 
-        final DataComponentPatch.Builder builder = DataComponentPatch.builder(); // Paper - private -> package-private
+        final DataComponentPatch.Builder builder = DataComponentPatch.builder();
         void skullCallback(net.minecraft.world.item.component.ResolvableProfile resolvableProfile) {} // Paper - support updating profile after resolving it
 
         <T> Applicator put(ItemMetaKeyType<T> key, T value) {
@@ -237,13 +240,13 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
     @Specific(Specific.To.NBT)
     static final ItemMetaKey HIDEFLAGS = new ItemMetaKey("ItemFlags");
     @Specific(Specific.To.NBT)
-    static final ItemMetaKeyType<Unit> HIDE_TOOLTIP = new ItemMetaKeyType<>(DataComponents.HIDE_TOOLTIP, "hide-tool-tip");
+    static final ItemMetaKeyType<TooltipDisplay> TOOLTIP_DISPLAY = new ItemMetaKeyType<>(DataComponents.TOOLTIP_DISPLAY, "tool-tip-display");
     @Specific(Specific.To.NBT)
     static final ItemMetaKeyType<ResourceLocation> TOOLTIP_STYLE = new ItemMetaKeyType<>(DataComponents.TOOLTIP_STYLE, "tool-tip-style");
     @Specific(Specific.To.NBT)
     static final ItemMetaKeyType<ResourceLocation> ITEM_MODEL = new ItemMetaKeyType<>(DataComponents.ITEM_MODEL, "item-model");
     @Specific(Specific.To.NBT)
-    static final ItemMetaKeyType<Unbreakable> UNBREAKABLE = new ItemMetaKeyType<>(DataComponents.UNBREAKABLE, "Unbreakable");
+    static final ItemMetaKeyType<Unit> UNBREAKABLE = new ItemMetaKeyType<>(DataComponents.UNBREAKABLE, "Unbreakable");
     @Specific(Specific.To.NBT)
     static final ItemMetaKeyType<Boolean> ENCHANTMENT_GLINT_OVERRIDE = new ItemMetaKeyType<>(DataComponents.ENCHANTMENT_GLINT_OVERRIDE, "enchantment-glint-override");
     @Specific(Specific.To.NBT)
@@ -272,17 +275,11 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
     static final ItemMetaKeyType<Integer> MAX_DAMAGE = new ItemMetaKeyType<>(DataComponents.MAX_DAMAGE, "max-damage");
     @Specific(Specific.To.NBT)
     static final ItemMetaKeyType<BlockItemStateProperties> BLOCK_DATA = new ItemMetaKeyType<>(DataComponents.BLOCK_STATE, "BlockStateTag");
+    static final ItemMetaKeyType<AdventureModePredicate> CAN_PLACE_ON = new ItemMetaKeyType<>(DataComponents.CAN_PLACE_ON);
+    static final ItemMetaKeyType<AdventureModePredicate> CAN_BREAK = new ItemMetaKeyType<>(DataComponents.CAN_BREAK);
     static final ItemMetaKey BUKKIT_CUSTOM_TAG = new ItemMetaKey(CraftItemStack.PDC_CUSTOM_DATA_KEY);
     @Specific(Specific.To.NBT)
-    static final ItemMetaKeyType<Unit> HIDE_ADDITIONAL_TOOLTIP = new ItemMetaKeyType(DataComponents.HIDE_ADDITIONAL_TOOLTIP);
-    @Specific(Specific.To.NBT)
     static final ItemMetaKeyType<CustomData> CUSTOM_DATA = new ItemMetaKeyType<>(DataComponents.CUSTOM_DATA);
-    // Paper start - fix ItemFlags
-    static final ItemMetaKeyType<net.minecraft.world.item.AdventureModePredicate> CAN_PLACE_ON = new ItemMetaKeyType<>(DataComponents.CAN_PLACE_ON);
-    static final ItemMetaKeyType<net.minecraft.world.item.AdventureModePredicate> CAN_BREAK = new ItemMetaKeyType<>(DataComponents.CAN_BREAK);
-    private List<net.minecraft.advancements.critereon.BlockPredicate> canPlaceOnPredicates;
-    private List<net.minecraft.advancements.critereon.BlockPredicate> canBreakPredicates;
-    // Paper end - fix ItemFlags
 
     // We store the raw original JSON representation of all text data. See SPIGOT-5063, SPIGOT-5656, SPIGOT-5304
     private Component displayName;
@@ -291,7 +288,7 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
     private CraftCustomModelDataComponent customModelData;
     private Integer enchantableValue;
     private Map<String, String> blockData;
-    private EnchantmentMap enchantments; // Paper
+    private EnchantmentMap enchantments;
     private Multimap<Attribute, AttributeModifier> attributeModifiers;
     private int repairCost;
     private int hideFlag;
@@ -310,10 +307,43 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
     private CraftToolComponent tool;
     private CraftEquippableComponent equippable;
     private CraftJukeboxComponent jukebox;
-    private Integer damage; // Paper - may not be set
+    private Integer damage;
     private Integer maxDamage;
+    private List<net.minecraft.advancements.critereon.BlockPredicate> canPlaceOnPredicates;
+    private List<net.minecraft.advancements.critereon.BlockPredicate> canBreakPredicates;
 
-    private static final Set<DataComponentType> HANDLED_TAGS = Sets.newHashSet();
+    // hide_additional_tooltip backward compatibility based on TooltipDisplayComponentFix#CONVERTED_ADDITIONAL_TOOLTIP_TYPES
+    private static final Set<DataComponentType<?>> HIDDEN_COMPONENTS_PREVIOUSLY = Set.of(
+        DataComponents.BANNER_PATTERNS,
+        DataComponents.BEES,
+        DataComponents.BLOCK_ENTITY_DATA,
+        DataComponents.BLOCK_STATE,
+        DataComponents.BUNDLE_CONTENTS,
+        DataComponents.CHARGED_PROJECTILES,
+        DataComponents.CONTAINER,
+        DataComponents.CONTAINER_LOOT,
+        DataComponents.FIREWORK_EXPLOSION,
+        DataComponents.FIREWORKS,
+        DataComponents.INSTRUMENT,
+        DataComponents.MAP_ID,
+        DataComponents.PAINTING_VARIANT,
+        DataComponents.POT_DECORATIONS,
+        DataComponents.POTION_CONTENTS,
+        DataComponents.TROPICAL_FISH_PATTERN,
+        DataComponents.WRITTEN_BOOK_CONTENT
+    );
+
+    private static final Map<ItemFlag, DataComponentType<?>> ITEM_FLAG_PURE_EQUIVALENTS = ImmutableMap.<ItemFlag, DataComponentType<?>>builder()
+        .put(ItemFlag.HIDE_ATTRIBUTES, DataComponents.ATTRIBUTE_MODIFIERS)
+        .put(ItemFlag.HIDE_ENCHANTS, DataComponents.ENCHANTMENTS)
+        .put(ItemFlag.HIDE_STORED_ENCHANTS, DataComponents.STORED_ENCHANTMENTS)
+        .put(ItemFlag.HIDE_UNBREAKABLE, DataComponents.UNBREAKABLE)
+        .put(ItemFlag.HIDE_DYE, DataComponents.DYED_COLOR)
+        .put(ItemFlag.HIDE_ARMOR_TRIM, DataComponents.TRIM)
+        .put(ItemFlag.HIDE_PLACED_ON, DataComponents.CAN_PLACE_ON)
+        .put(ItemFlag.HIDE_DESTROYS, DataComponents.CAN_BREAK)
+        .buildOrThrow();
+
     private static final CraftPersistentDataTypeRegistry DATA_TYPE_REGISTRY = new CraftPersistentDataTypeRegistry();
 
     private CompoundTag customTag;
@@ -342,10 +372,10 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
         this.blockData = meta.blockData;
 
         if (meta.enchantments != null) {
-            this.enchantments = new EnchantmentMap(meta.enchantments); // Paper
+            this.enchantments = new EnchantmentMap(meta.enchantments);
         }
 
-        if (meta.attributeModifiers != null) { // Paper
+        if (meta.attributeModifiers != null) {
             this.attributeModifiers = LinkedHashMultimap.create(meta.attributeModifiers);
         }
 
@@ -383,14 +413,12 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
         this.unhandledTags.copy(meta.unhandledTags.build());
         this.removedTags.addAll(meta.removedTags);
         this.persistentDataContainer.putAll(meta.persistentDataContainer.getTagsCloned()); // Paper - deep clone NBT tags
+        this.canPlaceOnPredicates = meta.canPlaceOnPredicates;
+        this.canBreakPredicates = meta.canBreakPredicates;
 
         this.customTag = meta.customTag;
 
         this.version = meta.version;
-        // Paper start
-        this.canPlaceOnPredicates = meta.canPlaceOnPredicates;
-        this.canBreakPredicates = meta.canBreakPredicates;
-        // Paper end
     }
 
     CraftMetaItem(DataComponentPatch tag, Set<DataComponentType<?>> extraHandledTags) { // Paper - improve handled tags on type changes
@@ -407,12 +435,7 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
         });
 
         CraftMetaItem.getOrEmpty(tag, CraftMetaItem.LORE).ifPresent((l) -> {
-            List<Component> list = l.lines();
-            this.lore = new ArrayList<Component>(list.size());
-            for (int index = 0; index < list.size(); index++) {
-                Component line = list.get(index);
-                this.lore.add(line);
-            }
+            this.lore = new ArrayList<>(l.lines());
         });
 
         CraftMetaItem.getOrEmpty(tag, CraftMetaItem.CUSTOM_MODEL_DATA).ifPresent((i) -> {
@@ -427,27 +450,28 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
 
         CraftMetaItem.getOrEmpty(tag, CraftMetaItem.ENCHANTMENTS).ifPresent((en) -> {
             this.enchantments = CraftMetaItem.buildEnchantments(en);
-            if (!en.showInTooltip) {
-                this.addItemFlags(ItemFlag.HIDE_ENCHANTS);
-            }
         });
         CraftMetaItem.getOrEmpty(tag, CraftMetaItem.ATTRIBUTES).ifPresent((en) -> {
             this.attributeModifiers = CraftMetaItem.buildModifiers(en);
-            if (!en.showInTooltip()) {
-                this.addItemFlags(ItemFlag.HIDE_ATTRIBUTES);
-            }
         });
 
         CraftMetaItem.getOrEmpty(tag, CraftMetaItem.REPAIR).ifPresent((i) -> {
             this.repairCost = i;
         });
 
-        CraftMetaItem.getOrEmpty(tag, CraftMetaItem.HIDE_ADDITIONAL_TOOLTIP).ifPresent((h) -> {
-            this.addItemFlags(ItemFlag.HIDE_ADDITIONAL_TOOLTIP);
+        CraftMetaItem.getOrEmpty(tag, CraftMetaItem.TOOLTIP_DISPLAY).ifPresent((en) -> {
+            this.hideTooltip = en.hideTooltip();
+            SequencedSet<DataComponentType<?>> hiddenComponents = en.hiddenComponents();
+            for (Entry<ItemFlag, DataComponentType<?>> entry : ITEM_FLAG_PURE_EQUIVALENTS.entrySet()) {
+                if (hiddenComponents.contains(entry.getValue())) {
+                    this.addItemFlags(entry.getKey());
+                }
+            }
+            if (hiddenComponents.containsAll(HIDDEN_COMPONENTS_PREVIOUSLY)) {
+                this.addItemFlags(ItemFlag.HIDE_ADDITIONAL_TOOLTIP);
+            }
         });
-        CraftMetaItem.getOrEmpty(tag, CraftMetaItem.HIDE_TOOLTIP).ifPresent((u) -> {
-            this.hideTooltip = true;
-        });
+
         CraftMetaItem.getOrEmpty(tag, CraftMetaItem.TOOLTIP_STYLE).ifPresent((key) -> {
             this.tooltipStyle = CraftNamespacedKey.fromMinecraft(key);
         });
@@ -456,9 +480,6 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
         });
         CraftMetaItem.getOrEmpty(tag, CraftMetaItem.UNBREAKABLE).ifPresent((u) -> {
             this.unbreakable = true;
-            if (!u.showInTooltip()) {
-                this.addItemFlags(ItemFlag.HIDE_UNBREAKABLE);
-            }
         });
         CraftMetaItem.getOrEmpty(tag, CraftMetaItem.ENCHANTMENT_GLINT_OVERRIDE).ifPresent((override) -> {
             this.enchantmentGlintOverride = override;
@@ -501,11 +522,10 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
         });
         CraftMetaItem.getOrEmpty(tag, CraftMetaItem.CUSTOM_DATA).ifPresent((customData) -> {
             this.customTag = customData.copyTag();
-            if (this.customTag.contains(CraftMetaItem.BUKKIT_CUSTOM_TAG.NBT)) {
-                CompoundTag compound = this.customTag.getCompound(CraftMetaItem.BUKKIT_CUSTOM_TAG.NBT);
-                Set<String> keys = compound.getAllKeys();
-                for (String key : keys) {
-                    this.persistentDataContainer.put(key, compound.get(key).copy());
+            CompoundTag customDataTag = this.customTag.getCompoundOrEmpty(CraftMetaItem.BUKKIT_CUSTOM_TAG.NBT);
+            if (!customDataTag.isEmpty()) {
+                for (Entry<String, net.minecraft.nbt.Tag> entry : customDataTag.entrySet()) {
+                    this.persistentDataContainer.put(entry.getKey(), entry.getValue().copy());
                 }
 
                 this.customTag.remove(CraftMetaItem.BUKKIT_CUSTOM_TAG.NBT);
@@ -515,20 +535,13 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
                 this.customTag = null;
             }
         });
-        // Paper start - fix ItemFlags
-        CraftMetaItem.getOrEmpty(tag, CraftMetaItem.CAN_PLACE_ON).ifPresent(data -> {
+
+        CraftMetaItem.getOrEmpty(tag, CraftMetaItem.CAN_PLACE_ON.TYPE).ifPresent(data -> {
             this.canPlaceOnPredicates = List.copyOf(data.predicates);
-            if (!data.showInTooltip()) {
-                this.addItemFlags(ItemFlag.HIDE_PLACED_ON);
-            }
         });
         CraftMetaItem.getOrEmpty(tag, CraftMetaItem.CAN_BREAK).ifPresent(data -> {
             this.canBreakPredicates = List.copyOf(data.predicates);
-            if (!data.showInTooltip()) {
-                this.addItemFlags(ItemFlag.HIDE_DESTROYS);
-            }
         });
-        // Paper end - fix ItemFlags
 
         // Paper start - improve checking handled data component types
         Set<DataComponentType<?>> handledTags = getTopLevelHandledDcts(this.getClass());
@@ -551,8 +564,8 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
         }
     }
 
-    static EnchantmentMap buildEnchantments(ItemEnchantments tag) { // Paper
-        EnchantmentMap enchantments = new EnchantmentMap(); // Paper
+    static EnchantmentMap buildEnchantments(ItemEnchantments tag) {
+        EnchantmentMap enchantments = new EnchantmentMap();
 
         tag.entrySet().forEach((entry) -> {
             Holder<net.minecraft.world.item.enchantment.Enchantment> id = entry.getKey();
@@ -575,9 +588,6 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
         for (int i = 0; i < size; i++) {
             ItemAttributeModifiers.Entry entry = mods.get(i);
             net.minecraft.world.entity.ai.attributes.AttributeModifier nmsModifier = entry.modifier();
-            if (nmsModifier == null) {
-                continue;
-            }
 
             AttributeModifier attribMod = CraftAttributeInstance.convert(nmsModifier);
 
@@ -586,27 +596,21 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
                 continue;
             }
 
-            if (entry.slot() != null) {
-                EquipmentSlotGroup slotName = entry.slot();
-                if (slotName == null) {
-                    modifiers.put(attribute, attribMod);
-                    continue;
-                }
+            EquipmentSlotGroup slotName = entry.slot();
 
-                org.bukkit.inventory.EquipmentSlotGroup slot = null;
-                try {
-                    slot = CraftEquipmentSlot.getSlot(slotName);
-                } catch (IllegalArgumentException ex) {
-                    // SPIGOT-4551 - Slot is invalid, should really match nothing but this is undefined behaviour anyway
-                }
-
-                if (slot == null) {
-                    modifiers.put(attribute, attribMod);
-                    continue;
-                }
-
-                attribMod = new AttributeModifier(attribMod.getKey(), attribMod.getAmount(), attribMod.getOperation(), slot);
+            org.bukkit.inventory.EquipmentSlotGroup slot = null;
+            try {
+                slot = CraftEquipmentSlot.getSlot(slotName);
+            } catch (IllegalArgumentException ex) {
+                // SPIGOT-4551 - Slot is invalid, should really match nothing but this is undefined behaviour anyway
             }
+
+            if (slot == null) {
+                modifiers.put(attribute, attribMod);
+                continue;
+            }
+
+            attribMod = new AttributeModifier(attribMod.getKey(), attribMod.getAmount(), attribMod.getOperation(), slot);
             modifiers.put(attribute, attribMod);
         }
         return modifiers;
@@ -643,8 +647,8 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
             } else {
                 // Legacy pre 1.20.5:
                 CompoundTag nbtBlockData = (CompoundTag) CraftNBTTagConfigSerializer.deserialize(blockData);
-                for (String key : nbtBlockData.getAllKeys()) {
-                    mapBlockData.put(key, nbtBlockData.getString(key));
+                for (String key : nbtBlockData.keySet()) {
+                    mapBlockData.put(key, nbtBlockData.getString(key).orElseThrow());
                 }
             }
 
@@ -670,11 +674,6 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
                     // Ignore when we got a old String which does not map to a Enum value anymore
                 }
             }
-        }
-
-        Boolean hideTooltip = SerializableMeta.getObject(Boolean.class, map, CraftMetaItem.HIDE_TOOLTIP.BUKKIT, true);
-        if (hideTooltip != null) {
-            this.setHideTooltip(hideTooltip);
         }
 
         String tooltipStyle = SerializableMeta.getString(map, CraftMetaItem.TOOLTIP_STYLE.BUKKIT, true);
@@ -776,8 +775,8 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
             ByteArrayInputStream buf = new ByteArrayInputStream(Base64.getDecoder().decode(unhandled));
             try {
                 CompoundTag unhandledTag = NbtIo.readCompressed(buf, NbtAccounter.unlimitedHeap());
-                DataComponentPatch unhandledPatch = DataComponentPatch.CODEC.parse(MinecraftServer.getDefaultRegistryAccess().createSerializationContext(NbtOps.INSTANCE), unhandledTag).result().get();
-                // Paper start
+                DataComponentPatch unhandledPatch = DataComponentPatch.CODEC.parse(CraftRegistry.getMinecraftRegistry().createSerializationContext(NbtOps.INSTANCE), unhandledTag).result().get();
+
                 CraftMetaItem.getOrEmpty(unhandledPatch, CraftMetaItem.CAN_PLACE_ON).ifPresent(data -> {
                     this.canPlaceOnPredicates = List.copyOf(data.predicates);
                 });
@@ -785,11 +784,10 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
                     this.canBreakPredicates = List.copyOf(data.predicates);
                 });
                 this.unhandledTags.copy(unhandledPatch.forget(type -> type == CraftMetaItem.CAN_PLACE_ON.TYPE || type == CraftMetaItem.CAN_BREAK.TYPE));
-                // Paper end
 
                 for (Entry<DataComponentType<?>, Optional<?>> entry : unhandledPatch.entrySet()) {
                     // Move removed unhandled tags to dedicated removedTags
-                    if (!entry.getValue().isPresent()) {
+                    if (entry.getValue().isEmpty()) {
                         DataComponentType<?> key = entry.getKey();
 
                         this.unhandledTags.clear(key);
@@ -845,17 +843,17 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
         for (int i = 0, size = mods.size(); i < size; i++) {
             CompoundTag entry = mods.getCompoundOrEmpty(i);
             if (entry.isEmpty()) {
-                // entry is not an actual NBTTagCompound. getCompound returns empty NBTTagCompound in that case
+                // entry is not an actual CompoundTag. getCompoundOrEmpty returns empty CompoundTag in that case
                 continue;
             }
-            net.minecraft.world.entity.ai.attributes.AttributeModifier nmsModifier = net.minecraft.world.entity.ai.attributes.AttributeModifier.load(entry);
+            net.minecraft.world.entity.ai.attributes.AttributeModifier nmsModifier = net.minecraft.world.entity.ai.attributes.AttributeModifier.CODEC.parse(NbtOps.INSTANCE, entry).resultOrPartial().orElse(null);
             if (nmsModifier == null) {
                 continue;
             }
 
             AttributeModifier attribMod = CraftAttributeInstance.convert(nmsModifier);
 
-            String attributeName = org.bukkit.craftbukkit.attribute.CraftAttributeMap.convertIfNeeded(entry.getString(CraftMetaItem.ATTRIBUTES_IDENTIFIER.NBT)); // Paper
+            String attributeName = entry.getString(CraftMetaItem.ATTRIBUTES_IDENTIFIER.NBT).map(CraftAttributeMap::convertIfNeeded).orElse(null);
             if (attributeName == null || attributeName.isEmpty()) {
                 continue;
             }
@@ -892,13 +890,13 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
         return modifiers;
     }
 
-    static EnchantmentMap buildEnchantments(Map<String, Object> map, ItemMetaKey key) { // Paper
+    static EnchantmentMap buildEnchantments(Map<String, Object> map, ItemMetaKey key) {
         Map<?, ?> ench = SerializableMeta.getObject(Map.class, map, key.BUKKIT, true);
         if (ench == null) {
             return null;
         }
 
-        EnchantmentMap enchantments = new EnchantmentMap(); // Paper
+        EnchantmentMap enchantments = new EnchantmentMap();
         for (Map.Entry<?, ?> entry : ench.entrySet()) {
             Enchantment enchantment = CraftEnchantment.stringToBukkit(entry.getKey().toString());
             if ((enchantment != null) && (entry.getValue() instanceof Integer)) {
@@ -969,21 +967,24 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
             itemTag.put(CraftMetaItem.BLOCK_DATA, new BlockItemStateProperties(this.blockData));
         }
 
-        if (this.hideFlag != 0) {
-            if (this.hasItemFlag(ItemFlag.HIDE_ADDITIONAL_TOOLTIP)) {
-                itemTag.put(CraftMetaItem.HIDE_ADDITIONAL_TOOLTIP, Unit.INSTANCE);
-            }
-        }
-
-        this.applyEnchantments(this.enchantments, itemTag, CraftMetaItem.ENCHANTMENTS, ItemFlag.HIDE_ENCHANTS);
+        this.applyEnchantments(this.enchantments, itemTag, CraftMetaItem.ENCHANTMENTS);
         this.applyModifiers(this.attributeModifiers, itemTag);
 
         if (this.hasRepairCost()) {
             itemTag.put(CraftMetaItem.REPAIR, this.repairCost);
         }
 
-        if (this.isHideTooltip()) {
-            itemTag.put(CraftMetaItem.HIDE_TOOLTIP, Unit.INSTANCE);
+        if (this.isHideTooltip() || this.hideFlag != 0) {
+            SequencedSet<DataComponentType<?>> hiddenComponents = new ReferenceLinkedOpenHashSet<>();
+            for (Entry<ItemFlag, DataComponentType<?>> entry : ITEM_FLAG_PURE_EQUIVALENTS.entrySet()) {
+                if (this.hasItemFlag(entry.getKey())) {
+                    hiddenComponents.add(entry.getValue());
+                }
+            }
+            if (this.hasItemFlag(ItemFlag.HIDE_ADDITIONAL_TOOLTIP)) {
+                hiddenComponents.addAll(HIDDEN_COMPONENTS_PREVIOUSLY);
+            }
+            itemTag.put(CraftMetaItem.TOOLTIP_DISPLAY, new TooltipDisplay(this.isHideTooltip(), hiddenComponents));
         }
 
         if (this.hasTooltipStyle()) {
@@ -995,7 +996,7 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
         }
 
         if (this.isUnbreakable()) {
-            itemTag.put(CraftMetaItem.UNBREAKABLE, new Unbreakable(!this.hasItemFlag(ItemFlag.HIDE_UNBREAKABLE)));
+            itemTag.put(CraftMetaItem.UNBREAKABLE, Unit.INSTANCE);
         }
 
         if (this.hasEnchantmentGlintOverride()) {
@@ -1050,14 +1051,12 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
             itemTag.put(CraftMetaItem.MAX_DAMAGE, this.maxDamage);
         }
 
-        // Paper start
         if (this.canPlaceOnPredicates != null && !this.canPlaceOnPredicates.isEmpty()) {
-            itemTag.put(CraftMetaItem.CAN_PLACE_ON, new net.minecraft.world.item.AdventureModePredicate(this.canPlaceOnPredicates, !this.hasItemFlag(ItemFlag.HIDE_PLACED_ON)));
+            itemTag.put(CraftMetaItem.CAN_PLACE_ON, new net.minecraft.world.item.AdventureModePredicate(this.canPlaceOnPredicates));
         }
         if (this.canBreakPredicates != null && !this.canBreakPredicates.isEmpty()) {
-            itemTag.put(CraftMetaItem.CAN_BREAK, new net.minecraft.world.item.AdventureModePredicate(this.canBreakPredicates, !this.hasItemFlag(ItemFlag.HIDE_DESTROYS)));
+            itemTag.put(CraftMetaItem.CAN_BREAK, new net.minecraft.world.item.AdventureModePredicate(this.canBreakPredicates));
         }
-        // Paper end
 
         for (Map.Entry<DataComponentType<?>, Optional<?>> e : this.unhandledTags.build().entrySet()) {
             e.getValue().ifPresent((value) -> {
@@ -1091,26 +1090,21 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
         }
     }
 
-    void applyEnchantments(Map<Enchantment, Integer> enchantments, CraftMetaItem.Applicator tag, ItemMetaKeyType<ItemEnchantments> key, ItemFlag itemFlag) {
-        if (enchantments == null /*&& !this.hasItemFlag(itemFlag)*/) { // Paper - general item meta fixes - only emit enchantment component if enchantments are defined
+    void applyEnchantments(Map<Enchantment, Integer> enchantments, CraftMetaItem.Applicator tag, ItemMetaKeyType<ItemEnchantments> key) {
+        if (enchantments == null) { // only emit enchantment component if enchantments are defined
             return;
         }
 
         ItemEnchantments.Mutable list = new ItemEnchantments.Mutable(ItemEnchantments.EMPTY);
-
-        if (enchantments != null) {
-            for (Map.Entry<Enchantment, Integer> entry : enchantments.entrySet()) {
-                list.set(CraftEnchantment.bukkitToMinecraftHolder(entry.getKey()), entry.getValue());
-            }
+        for (Entry<Enchantment, Integer> entry : enchantments.entrySet()) {
+            list.set(CraftEnchantment.bukkitToMinecraftHolder(entry.getKey()), entry.getValue());
         }
-
-        list.showInTooltip = !this.hasItemFlag(itemFlag);
         tag.put(key, list.toImmutable());
     }
 
     void applyModifiers(Multimap<Attribute, AttributeModifier> modifiers, CraftMetaItem.Applicator tag) {
-        if (modifiers == null/* || modifiers.isEmpty()*/) { // Paper - empty modifiers has a specific meaning, they should still be saved
-            // Paper - don't save ItemFlag if the underlying data isn't present
+        if (modifiers == null) { // empty modifiers has a specific meaning, they should still be saved
+            // don't save ItemFlag if the underlying data isn't present
             return;
         }
 
@@ -1129,7 +1123,7 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
             EquipmentSlotGroup group = CraftEquipmentSlot.getNMSGroup(entry.getValue().getSlotGroup());
             list.add(name, nmsModifier, group);
         }
-        tag.put(CraftMetaItem.ATTRIBUTES, list.build().withTooltip(!this.hasItemFlag(ItemFlag.HIDE_ATTRIBUTES)));
+        tag.put(CraftMetaItem.ATTRIBUTES, list.build());
     }
 
     boolean applicableTo(Material type) {
@@ -1147,10 +1141,9 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
 
     @Overridden
     boolean isEmpty() {
-        return !(this.hasDisplayName() || this.hasItemName() || this.hasLocalizedName() || this.hasEnchants() || (this.lore != null) || this.hasCustomModelData() || this.hasEnchantable() || this.hasBlockData() || this.hasRepairCost() || !this.unhandledTags.build().isEmpty() || !this.removedTags.isEmpty() || !this.persistentDataContainer.isEmpty() || this.hideFlag != 0 || this.isHideTooltip() || this.hasTooltipStyle() || this.hasItemModel() || this.isUnbreakable() || this.hasEnchantmentGlintOverride() || this.isGlider() || this.hasDamageResistant() || this.hasMaxStackSize() || this.hasRarity() || this.hasUseRemainder() || this.hasUseCooldown() || this.hasFood() || this.hasTool() || this.hasJukeboxPlayable() || this.hasEquippable() || this.hasDamageValue() || this.hasMaxDamage() || this.hasAttributeModifiers() || this.customTag != null || this.canPlaceOnPredicates != null || this.canBreakPredicates != null); // Paper
+        return !(this.hasDisplayName() || this.hasItemName() || this.hasLocalizedName() || this.hasEnchants() || (this.lore != null) || this.hasCustomModelData() || this.hasEnchantable() || this.hasBlockData() || this.hasRepairCost() || !this.unhandledTags.build().isEmpty() || !this.removedTags.isEmpty() || !this.persistentDataContainer.isEmpty() || this.hideFlag != 0 || this.isHideTooltip() || this.hasTooltipStyle() || this.hasItemModel() || this.isUnbreakable() || this.hasEnchantmentGlintOverride() || this.isGlider() || this.hasDamageResistant() || this.hasMaxStackSize() || this.hasRarity() || this.hasUseRemainder() || this.hasUseCooldown() || this.hasFood() || this.hasTool() || this.hasJukeboxPlayable() || this.hasEquippable() || this.hasDamageValue() || this.hasMaxDamage() || this.hasAttributeModifiers() || this.customTag != null || this.canPlaceOnPredicates != null || this.canBreakPredicates != null);
     }
 
-    // Paper start
     @Override
     public net.kyori.adventure.text.Component customName() {
         return displayName == null ? null : io.papermc.paper.adventure.PaperAdventure.asAdventure(displayName);
@@ -1160,30 +1153,27 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
     public void customName(final net.kyori.adventure.text.Component customName) {
         this.displayName = customName == null ? null : io.papermc.paper.adventure.PaperAdventure.asVanilla(customName);
     }
-    // Paper end
 
     @Override
     public String getDisplayName() {
         return CraftChatMessage.fromComponent(this.displayName);
     }
 
-    // Paper start
     @Override
     public net.md_5.bungee.api.chat.BaseComponent[] getDisplayNameComponent() {
         return displayName == null ? new net.md_5.bungee.api.chat.BaseComponent[0] : net.md_5.bungee.chat.ComponentSerializer.parse(CraftChatMessage.toJSON(displayName));
     }
-    // Paper end
+
     @Override
     public final void setDisplayName(String name) {
         this.displayName = CraftChatMessage.fromStringOrNull(name);
     }
 
-    // Paper start
     @Override
     public void setDisplayNameComponent(net.md_5.bungee.api.chat.BaseComponent[] component) {
         this.displayName = CraftChatMessage.fromJSON(net.md_5.bungee.chat.ComponentSerializer.toString(component));
     }
-    // Paper end
+
     @Override
     public boolean hasCustomName() {
         return this.displayName != null;
@@ -1204,7 +1194,6 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
         return this.itemName != null;
     }
 
-    // Paper start - Adventure
     @Override
     public net.kyori.adventure.text.Component itemName() {
         return io.papermc.paper.adventure.PaperAdventure.asAdventure(this.itemName);
@@ -1214,7 +1203,6 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
     public void itemName(final net.kyori.adventure.text.Component name) {
         this.itemName = io.papermc.paper.adventure.PaperAdventure.asVanilla(name);
     }
-    // Paper end - Adventure
 
     @Override
     public String getLocalizedName() {
@@ -1235,7 +1223,6 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
         return this.lore != null && !this.lore.isEmpty();
     }
 
-    // Paper start
     @Override
     public List<net.kyori.adventure.text.Component> lore() {
         return this.lore != null ? io.papermc.paper.adventure.PaperAdventure.asAdventure(this.lore) : null;
@@ -1256,7 +1243,6 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
 
         this.lore = io.papermc.paper.adventure.PaperAdventure.asVanilla(lore);
     }
-    // Paper end
 
     @Override
     public boolean hasRepairCost() {
@@ -1264,15 +1250,15 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
     }
 
     @Override
-    public boolean hasEnchant(Enchantment ench) {
-        Preconditions.checkArgument(ench != null, "Enchantment cannot be null");
-        return this.hasEnchants() && this.enchantments.containsKey(ench);
+    public boolean hasEnchant(Enchantment enchant) {
+        Preconditions.checkArgument(enchant != null, "Enchantment cannot be null");
+        return this.hasEnchants() && this.enchantments.containsKey(enchant);
     }
 
     @Override
-    public int getEnchantLevel(Enchantment ench) {
-        Preconditions.checkArgument(ench != null, "Enchantment cannot be null");
-        Integer level = this.hasEnchants() ? this.enchantments.get(ench) : null;
+    public int getEnchantLevel(Enchantment enchant) {
+        Preconditions.checkArgument(enchant != null, "Enchantment cannot be null");
+        Integer level = this.hasEnchants() ? this.enchantments.get(enchant) : null;
         if (level == null) {
             return 0;
         }
@@ -1285,23 +1271,23 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
     }
 
     @Override
-    public boolean addEnchant(Enchantment ench, int level, boolean ignoreRestrictions) {
-        Preconditions.checkArgument(ench != null, "Enchantment cannot be null");
+    public boolean addEnchant(Enchantment enchant, int level, boolean ignoreRestrictions) {
+        Preconditions.checkArgument(enchant != null, "Enchantment cannot be null");
         if (this.enchantments == null) {
-            this.enchantments = new EnchantmentMap(); // Paper
+            this.enchantments = new EnchantmentMap();
         }
 
-        if (ignoreRestrictions || level >= ench.getStartLevel() && level <= ench.getMaxLevel()) {
-            Integer old = this.enchantments.put(ench, level);
+        if (ignoreRestrictions || level >= enchant.getStartLevel() && level <= enchant.getMaxLevel()) {
+            Integer old = this.enchantments.put(enchant, level);
             return old == null || old != level;
         }
         return false;
     }
 
     @Override
-    public boolean removeEnchant(Enchantment ench) {
-        Preconditions.checkArgument(ench != null, "Enchantment cannot be null");
-        boolean enchantmentRemoved = this.hasEnchants() && this.enchantments.remove(ench) != null;
+    public boolean removeEnchant(Enchantment enchant) {
+        Preconditions.checkArgument(enchant != null, "Enchantment cannot be null");
+        boolean enchantmentRemoved = this.hasEnchants() && this.enchantments.remove(enchant) != null;
         // If we no longer have any enchantments, then clear enchantment tag
         if (enchantmentRemoved && this.enchantments.isEmpty()) {
             this.enchantments = null;
@@ -1322,8 +1308,8 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
     }
 
     @Override
-    public boolean hasConflictingEnchant(Enchantment ench) {
-        return CraftMetaItem.checkConflictingEnchants(this.enchantments, ench);
+    public boolean hasConflictingEnchant(Enchantment enchant) {
+        return CraftMetaItem.checkConflictingEnchants(this.enchantments, enchant);
     }
 
     @Override
@@ -1365,17 +1351,16 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
 
     @Override
     public List<String> getLore() {
-        return this.lore == null ? null : new ArrayList<String>(Lists.transform(this.lore, CraftChatMessage::fromComponent));
+        return this.lore == null ? null : new ArrayList<>(Lists.transform(this.lore, CraftChatMessage::fromComponent));
     }
 
-    // Paper start
     @Override
     public List<net.md_5.bungee.api.chat.BaseComponent[]> getLoreComponents() {
         return this.lore == null ? null : new ArrayList<>(this.lore.stream().map(entry ->
             net.md_5.bungee.chat.ComponentSerializer.parse(CraftChatMessage.toJSON(entry))
         ).collect(java.util.stream.Collectors.toList()));
     }
-    // Paper end
+
     @Override
     public void setLore(List<String> lore) {
         Preconditions.checkArgument(lore == null || lore.size() <= ItemLore.MAX_LINES, "lore cannot have more than %s lines", ItemLore.MAX_LINES); // Paper - limit lore lines
@@ -1391,7 +1376,6 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
         }
     }
 
-    // Paper start
     @Override
     public void setLoreComponents(List<net.md_5.bungee.api.chat.BaseComponent[]> lore) {
         Preconditions.checkArgument(lore == null || lore.size() <= ItemLore.MAX_LINES, "lore cannot have more than %s lines", ItemLore.MAX_LINES); // Paper - limit lore lines
@@ -1406,7 +1390,7 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
             }
         }
     }
-    // Paper end
+
     @Override
     public boolean hasCustomModelData() {
         return this.customModelData != null;
@@ -1418,7 +1402,7 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
 
         List<Float> floats = this.customModelData.getFloats();
         Preconditions.checkState(!floats.isEmpty(), "No numeric custom model data");
-        return floats.get(0).intValue();
+        return floats.getFirst().intValue();
     }
 
     @Override
@@ -1449,7 +1433,7 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
 
     @Override
     public void setEnchantable(Integer data) {
-        Preconditions.checkArgument(data == null || data > 0, "Enchantability must be positive"); // Paper
+        Preconditions.checkArgument(data == null || data > 0, "Enchantability must be positive");
         this.enchantableValue = data;
     }
 
@@ -1557,12 +1541,12 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
 
     @Override
     public boolean isFireResistant() {
-        return this.hasDamageResistant() && DamageTypeTags.IS_FIRE.equals(this.getDamageResistant());
+        return this.hasDamageResistant() && this.damageResistant == net.minecraft.tags.DamageTypeTags.IS_FIRE;
     }
 
     @Override
     public void setFireResistant(boolean fireResistant) {
-        this.setDamageResistant(DamageTypeTags.IS_FIRE);
+        this.damageResistant = net.minecraft.tags.DamageTypeTags.IS_FIRE;
     }
 
     @Override
@@ -1626,7 +1610,7 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
 
     @Override
     public void setUseRemainder(ItemStack useRemainder) {
-        Preconditions.checkArgument(useRemainder == null || !useRemainder.isEmpty(), "Item cannot be empty"); // Paper
+        Preconditions.checkArgument(useRemainder == null || !useRemainder.isEmpty(), "Item cannot be empty");
         this.useRemainder = useRemainder;
     }
 
@@ -1667,7 +1651,7 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
 
     @Override
     public ToolComponent getTool() {
-        return (this.hasTool()) ? new CraftToolComponent(this.tool) : new CraftToolComponent(new Tool(Collections.emptyList(), 1.0F, 0));
+        return (this.hasTool()) ? new CraftToolComponent(this.tool) : new CraftToolComponent(new Tool(Collections.emptyList(), 1.0F, 0, true));
     }
 
     @Override
@@ -1697,7 +1681,7 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
 
     @Override
     public JukeboxPlayableComponent getJukeboxPlayable() {
-        return (this.hasJukeboxPlayable()) ? new CraftJukeboxComponent(this.jukebox) : new CraftJukeboxComponent(new JukeboxPlayable(new EitherHolder<>(JukeboxSongs.THIRTEEN), true));
+        return (this.hasJukeboxPlayable()) ? new CraftJukeboxComponent(this.jukebox) : new CraftJukeboxComponent(new JukeboxPlayable(new EitherHolder<>(JukeboxSongs.THIRTEEN)));
     }
 
     @Override
@@ -1735,20 +1719,20 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
 
     @Override
     public Collection<AttributeModifier> getAttributeModifiers(@Nonnull Attribute attribute) {
-        Preconditions.checkNotNull(attribute, "Attribute cannot be null");
-        if (this.attributeModifiers == null) return null; // Paper - fix NPE
+        Preconditions.checkArgument(attribute != null, "Attribute cannot be null");
+        if (this.attributeModifiers == null) return null;
         return this.attributeModifiers.containsKey(attribute) ? ImmutableList.copyOf(this.attributeModifiers.get(attribute)) : null;
     }
 
     @Override
     public boolean addAttributeModifier(@Nonnull Attribute attribute, @Nonnull AttributeModifier modifier) {
-        Preconditions.checkNotNull(attribute, "Attribute cannot be null");
-        Preconditions.checkNotNull(modifier, "AttributeModifier cannot be null");
-        if (this.attributeModifiers != null) { // Paper
-        for (Map.Entry<Attribute, AttributeModifier> entry : this.attributeModifiers.entries()) {
-            Preconditions.checkArgument(!(entry.getValue().getKey().equals(modifier.getKey()) && entry.getKey() == attribute), "Cannot register AttributeModifier. Modifier is already applied! %s", modifier); // Paper - attribute modifiers with same namespaced key but on different attributes are fine
+        Preconditions.checkArgument(attribute != null, "Attribute cannot be null");
+        Preconditions.checkArgument(modifier != null, "AttributeModifier cannot be null");
+        if (this.attributeModifiers != null) {
+            for (Map.Entry<Attribute, AttributeModifier> entry : this.attributeModifiers.entries()) {
+                Preconditions.checkArgument(!(entry.getValue().getKey().equals(modifier.getKey()) && entry.getKey() == attribute), "Cannot register AttributeModifier. Modifier is already applied! %s", modifier); // Paper - attribute modifiers with same namespaced key but on different attributes are fine
+            }
         }
-        } // Paper
         this.checkAttributeList(); // Paper - moved down
         return this.attributeModifiers.put(attribute, modifier);
     }
@@ -1787,14 +1771,14 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
 
     @Override
     public boolean removeAttributeModifier(@Nonnull Attribute attribute) {
-        Preconditions.checkNotNull(attribute, "Attribute cannot be null");
-        if (this.attributeModifiers == null) return false; // Paper
+        Preconditions.checkArgument(attribute != null, "Attribute cannot be null");
+        if (this.attributeModifiers == null) return false;
         return !this.attributeModifiers.removeAll(attribute).isEmpty();
     }
 
     @Override
-    public boolean removeAttributeModifier(@Nullable EquipmentSlot slot) {
-        if (this.attributeModifiers == null) return false; // Paper
+    public boolean removeAttributeModifier(@Nonnull EquipmentSlot slot) {
+        if (this.attributeModifiers == null) return false;
         int removed = 0;
         Iterator<Map.Entry<Attribute, AttributeModifier>> iter = this.attributeModifiers.entries().iterator();
 
@@ -1810,9 +1794,9 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
 
     @Override
     public boolean removeAttributeModifier(@Nonnull Attribute attribute, @Nonnull AttributeModifier modifier) {
-        Preconditions.checkNotNull(attribute, "Attribute cannot be null");
-        Preconditions.checkNotNull(modifier, "AttributeModifier cannot be null");
-        if (this.attributeModifiers == null) return false; // Paper
+        Preconditions.checkArgument(attribute != null, "Attribute cannot be null");
+        Preconditions.checkArgument(modifier != null, "AttributeModifier cannot be null");
+        if (this.attributeModifiers == null) return false;
         int removed = 0;
         Iterator<Map.Entry<Attribute, AttributeModifier>> iter = this.attributeModifiers.entries().iterator();
 
@@ -1837,13 +1821,13 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
         CraftMetaItem.Applicator tag = new CraftMetaItem.Applicator() {}; // Paper - support updating profile after resolving it
         this.applyToItem(tag);
         DataComponentPatch patch = tag.build();
-        net.minecraft.nbt.Tag nbt = DataComponentPatch.CODEC.encodeStart(MinecraftServer.getDefaultRegistryAccess().createSerializationContext(NbtOps.INSTANCE), patch).getOrThrow();
+        net.minecraft.nbt.Tag nbt = DataComponentPatch.CODEC.encodeStart(CraftRegistry.getMinecraftRegistry().createSerializationContext(NbtOps.INSTANCE), patch).getOrThrow();
         return nbt.toString();
     }
 
     @Override
     public String getAsComponentString() {
-        CraftMetaItem.Applicator tag = new CraftMetaItem.Applicator() {}; // Paper
+        CraftMetaItem.Applicator tag = new CraftMetaItem.Applicator() {};
         this.applyToItem(tag);
         DataComponentPatch patch = tag.build();
 
@@ -1899,18 +1883,18 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
 
     @Override
     public boolean hasDamage() {
-        return this.damage != null && this.damage > 0; // Paper - null check
+        return this.damage != null && this.damage > 0;
     }
 
     @Override
     public int getDamage() {
-        return this.damage == null ? 0 : this.damage; // Paper - null check
+        return this.damage == null ? 0 : this.damage;
     }
 
     @Override
     public void setDamage(int damage) {
-        Preconditions.checkArgument(damage >= 0, "Damage cannot be negative"); // Paper
-        Preconditions.checkArgument(!this.hasMaxDamage() || damage <= this.maxDamage, "Damage cannot exceed max damage"); // Paper
+        Preconditions.checkArgument(damage >= 0, "Damage cannot be negative");
+        Preconditions.checkArgument(!this.hasMaxDamage() || damage <= this.maxDamage, "Damage cannot exceed max damage");
         this.damage = damage;
     }
 
@@ -1939,7 +1923,7 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
 
     @Override
     public void setMaxDamage(Integer maxDamage) {
-        Preconditions.checkArgument(maxDamage == null || maxDamage > 0, "Max damage should be positive"); // Paper
+        Preconditions.checkArgument(maxDamage == null || maxDamage > 0, "Max damage should be positive");
         this.maxDamage = maxDamage;
     }
 
@@ -1963,41 +1947,41 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
      * Checking your own internals is redundant if you are not common, as notUncommon is meant for checking those 'not common' variables.
      */
     @Overridden
-    boolean equalsCommon(CraftMetaItem that) {
-        return ((this.hasDisplayName() ? that.hasDisplayName() && this.displayName.equals(that.displayName) : !that.hasDisplayName()))
-                && (this.hasItemName() ? that.hasItemName() && this.itemName.equals(that.itemName) : !that.hasItemName())
-                && (this.hasEnchants() ? that.hasEnchants() && this.enchantments.equals(that.enchantments) : !that.hasEnchants())
-                && (Objects.equals(this.lore, that.lore))
-                && (this.hasCustomModelData() ? that.hasCustomModelData() && this.customModelData.equals(that.customModelData) : !that.hasCustomModelData())
-                && (this.hasEnchantable() ? that.hasEnchantable() && this.enchantableValue.equals(that.enchantableValue) : !that.hasEnchantable())
-                && (this.hasBlockData() ? that.hasBlockData() && this.blockData.equals(that.blockData) : !that.hasBlockData())
-                && (this.hasRepairCost() ? that.hasRepairCost() && this.repairCost == that.repairCost : !that.hasRepairCost())
-                && (this.attributeModifiers != null ? that.attributeModifiers != null && CraftMetaItem.compareModifiers(this.attributeModifiers, that.attributeModifiers) : that.attributeModifiers == null) // Paper - track only null modifiers
-                && (this.unhandledTags.equals(that.unhandledTags))
-                && (this.removedTags.equals(that.removedTags))
-                && (Objects.equals(this.customTag, that.customTag))
-                && (this.persistentDataContainer.equals(that.persistentDataContainer))
-                && (this.hideFlag == that.hideFlag)
-                && (this.isHideTooltip() == that.isHideTooltip())
-                && (this.hasTooltipStyle() ? that.hasTooltipStyle() && this.tooltipStyle.equals(that.tooltipStyle) : !that.hasTooltipStyle())
-                && (this.hasItemModel() ? that.hasItemModel() && this.itemModel.equals(that.itemModel) : !that.hasItemModel())
-                && (this.isUnbreakable() == that.isUnbreakable())
-                && (this.hasEnchantmentGlintOverride() ? that.hasEnchantmentGlintOverride() && this.enchantmentGlintOverride.equals(that.enchantmentGlintOverride) : !that.hasEnchantmentGlintOverride())
-                && (this.glider == that.glider)
-                && (this.hasDamageResistant() ? that.hasDamageResistant() && this.damageResistant.equals(that.damageResistant) : !that.hasDamageResistant())
-                && (this.hasMaxStackSize() ? that.hasMaxStackSize() && this.maxStackSize.equals(that.maxStackSize) : !that.hasMaxStackSize())
-                && (this.rarity == that.rarity)
-                && (this.hasUseRemainder() ? that.hasUseRemainder() && this.useRemainder.equals(that.useRemainder) : !that.hasUseRemainder())
-                && (this.hasUseCooldown() ? that.hasUseCooldown() && this.useCooldown.equals(that.useCooldown) : !that.hasUseCooldown())
-                && (this.hasFood() ? that.hasFood() && this.food.equals(that.food) : !that.hasFood())
-                && (this.hasTool() ? that.hasTool() && this.tool.equals(that.tool) : !that.hasTool())
-                && (this.hasEquippable() ? that.hasEquippable() && this.equippable.equals(that.equippable) : !that.hasEquippable())
-                && (this.hasJukeboxPlayable() ? that.hasJukeboxPlayable() && this.jukebox.equals(that.jukebox) : !that.hasJukeboxPlayable())
-                && (Objects.equals(this.damage, that.damage)) // Paper - preserve empty/0 damage
-                && (this.hasMaxDamage() ? that.hasMaxDamage() && this.maxDamage.equals(that.maxDamage) : !that.hasMaxDamage())
-                && (this.canPlaceOnPredicates != null ? that.canPlaceOnPredicates != null && this.canPlaceOnPredicates.equals(that.canPlaceOnPredicates) : that.canPlaceOnPredicates == null) // Paper
-                && (this.canBreakPredicates != null ? that.canBreakPredicates != null && this.canBreakPredicates.equals(that.canBreakPredicates) : that.canBreakPredicates == null) // Paper
-                && (this.version == that.version);
+    boolean equalsCommon(CraftMetaItem meta) {
+        return ((this.hasDisplayName() ? meta.hasDisplayName() && this.displayName.equals(meta.displayName) : !meta.hasDisplayName()))
+                && (this.hasItemName() ? meta.hasItemName() && this.itemName.equals(meta.itemName) : !meta.hasItemName())
+                && (this.hasEnchants() ? meta.hasEnchants() && this.enchantments.equals(meta.enchantments) : !meta.hasEnchants())
+                && (Objects.equals(this.lore, meta.lore))
+                && (this.hasCustomModelData() ? meta.hasCustomModelData() && this.customModelData.equals(meta.customModelData) : !meta.hasCustomModelData())
+                && (this.hasEnchantable() ? meta.hasEnchantable() && this.enchantableValue.equals(meta.enchantableValue) : !meta.hasEnchantable())
+                && (this.hasBlockData() ? meta.hasBlockData() && this.blockData.equals(meta.blockData) : !meta.hasBlockData())
+                && (this.hasRepairCost() ? meta.hasRepairCost() && this.repairCost == meta.repairCost : !meta.hasRepairCost())
+                && (this.attributeModifiers != null ? meta.attributeModifiers != null && CraftMetaItem.compareModifiers(this.attributeModifiers, meta.attributeModifiers) : meta.attributeModifiers == null) // Paper - track only null modifiers
+                && (this.unhandledTags.equals(meta.unhandledTags))
+                && (this.removedTags.equals(meta.removedTags))
+                && (Objects.equals(this.customTag, meta.customTag))
+                && (this.persistentDataContainer.equals(meta.persistentDataContainer))
+                && (this.hideFlag == meta.hideFlag)
+                && (this.isHideTooltip() == meta.isHideTooltip())
+                && (this.hasTooltipStyle() ? meta.hasTooltipStyle() && this.tooltipStyle.equals(meta.tooltipStyle) : !meta.hasTooltipStyle())
+                && (this.hasItemModel() ? meta.hasItemModel() && this.itemModel.equals(meta.itemModel) : !meta.hasItemModel())
+                && (this.isUnbreakable() == meta.isUnbreakable())
+                && (this.hasEnchantmentGlintOverride() ? meta.hasEnchantmentGlintOverride() && this.enchantmentGlintOverride.equals(meta.enchantmentGlintOverride) : !meta.hasEnchantmentGlintOverride())
+                && (this.glider == meta.glider)
+                && (this.hasDamageResistant() ? meta.hasDamageResistant() && this.damageResistant.equals(meta.damageResistant) : !meta.hasDamageResistant())
+                && (this.hasMaxStackSize() ? meta.hasMaxStackSize() && this.maxStackSize.equals(meta.maxStackSize) : !meta.hasMaxStackSize())
+                && (this.rarity == meta.rarity)
+                && (this.hasUseRemainder() ? meta.hasUseRemainder() && this.useRemainder.equals(meta.useRemainder) : !meta.hasUseRemainder())
+                && (this.hasUseCooldown() ? meta.hasUseCooldown() && this.useCooldown.equals(meta.useCooldown) : !meta.hasUseCooldown())
+                && (this.hasFood() ? meta.hasFood() && this.food.equals(meta.food) : !meta.hasFood())
+                && (this.hasTool() ? meta.hasTool() && this.tool.equals(meta.tool) : !meta.hasTool())
+                && (this.hasEquippable() ? meta.hasEquippable() && this.equippable.equals(meta.equippable) : !meta.hasEquippable())
+                && (this.hasJukeboxPlayable() ? meta.hasJukeboxPlayable() && this.jukebox.equals(meta.jukebox) : !meta.hasJukeboxPlayable())
+                && (Objects.equals(this.damage, meta.damage)) // Paper - preserve empty/0 damage
+                && (this.hasMaxDamage() ? meta.hasMaxDamage() && this.maxDamage.equals(meta.maxDamage) : !meta.hasMaxDamage())
+                && (this.canPlaceOnPredicates != null ? meta.canPlaceOnPredicates != null && this.canPlaceOnPredicates.equals(meta.canPlaceOnPredicates) : meta.canPlaceOnPredicates == null) // Paper
+                && (this.canBreakPredicates != null ? meta.canBreakPredicates != null && this.canBreakPredicates.equals(meta.canBreakPredicates) : meta.canBreakPredicates == null) // Paper
+                && (this.version == meta.version);
     }
 
     /**
@@ -2047,10 +2031,10 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
         hash = 61 * hash + (this.hasJukeboxPlayable() ? this.jukebox.hashCode() : 0);
         hash = 61 * hash + (this.hasEquippable() ? this.equippable.hashCode() : 0);
         hash = 61 * hash + (this.hasDamageValue() ? this.damage : -1); // Paper - preserve empty/0 damage
-        hash = 61 * hash + (this.hasMaxDamage() ? this.maxDamage.hashCode() : 0); // Paper - max damage is not a boolean
+        hash = 61 * hash + (this.hasMaxDamage() ? this.maxDamage.hashCode() : 0);
         hash = 61 * hash + (this.attributeModifiers != null ? this.attributeModifiers.hashCode() : 0); // Paper - track only null attributes
-        hash = 61 * hash + (this.canPlaceOnPredicates != null ? this.canPlaceOnPredicates.hashCode() : 0); // Paper
-        hash = 61 * hash + (this.canBreakPredicates != null ? this.canBreakPredicates.hashCode() : 0); // Paper
+        hash = 61 * hash + (this.canPlaceOnPredicates != null ? this.canPlaceOnPredicates.hashCode() : 0);
+        hash = 61 * hash + (this.canBreakPredicates != null ? this.canBreakPredicates.hashCode() : 0);
         hash = 61 * hash + this.version;
         return hash;
     }
@@ -2061,7 +2045,7 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
         try {
             CraftMetaItem clone = (CraftMetaItem) super.clone();
             if (this.lore != null) {
-                clone.lore = new ArrayList<Component>(this.lore);
+                clone.lore = new ArrayList<>(this.lore);
             }
             if (this.hasCustomModelData()) {
                 clone.customModelData = new CraftCustomModelDataComponent(this.customModelData);
@@ -2069,9 +2053,9 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
             clone.enchantableValue = this.enchantableValue;
             clone.blockData = this.blockData;
             if (this.enchantments != null) {
-                clone.enchantments = new EnchantmentMap(this.enchantments); // Paper
+                clone.enchantments = new EnchantmentMap(this.enchantments);
             }
-            if (this.attributeModifiers != null) { // Paper
+            if (this.attributeModifiers != null) {
                 clone.attributeModifiers = LinkedHashMultimap.create(this.attributeModifiers);
             }
             if (this.customTag != null) {
@@ -2110,14 +2094,14 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
             clone.damage = this.damage;
             clone.maxDamage = this.maxDamage;
             clone.version = this.version;
-            // Paper start
+
             if (this.canPlaceOnPredicates != null) {
                 clone.canPlaceOnPredicates = List.copyOf(this.canPlaceOnPredicates);
             }
             if (this.canBreakPredicates != null) {
                 clone.canBreakPredicates = List.copyOf(this.canBreakPredicates);
             }
-            // Paper end
+
             return clone;
         } catch (CloneNotSupportedException e) {
             throw new Error(e);
@@ -2170,16 +2154,12 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
             builder.put(CraftMetaItem.REPAIR.BUKKIT, this.repairCost);
         }
 
-        List<String> hideFlags = new ArrayList<String>();
+        List<String> hideFlags = new ArrayList<>();
         for (ItemFlag hideFlagEnum : this.getItemFlags()) {
             hideFlags.add(CraftItemFlag.bukkitToString(hideFlagEnum));
         }
         if (!hideFlags.isEmpty()) {
             builder.put(CraftMetaItem.HIDEFLAGS.BUKKIT, hideFlags);
-        }
-
-        if (this.isHideTooltip()) {
-            builder.put(CraftMetaItem.HIDE_TOOLTIP.BUKKIT, this.hideTooltip);
         }
 
         if (this.hasTooltipStyle()) {
@@ -2246,7 +2226,7 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
             builder.put(CraftMetaItem.MAX_DAMAGE.BUKKIT, this.maxDamage);
         }
 
-        final Map<String, net.minecraft.nbt.Tag> internalTags = new HashMap<String, net.minecraft.nbt.Tag>();
+        final Map<String, net.minecraft.nbt.Tag> internalTags = new HashMap<>();
         this.serializeInternal(internalTags);
         if (!internalTags.isEmpty()) {
             CompoundTag internal = new CompoundTag();
@@ -2262,18 +2242,17 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
             }
         }
 
-        // Paper start
         final boolean canBreakAddToUnhandled = this.canBreakPredicates != null && !this.canBreakPredicates.isEmpty();
         if (canBreakAddToUnhandled) {
-            this.unhandledTags.set(DataComponents.CAN_BREAK, new net.minecraft.world.item.AdventureModePredicate(this.canBreakPredicates, !this.hasItemFlag(ItemFlag.HIDE_DESTROYS)));
+            this.unhandledTags.set(DataComponents.CAN_BREAK, new net.minecraft.world.item.AdventureModePredicate(this.canBreakPredicates));
         }
         final boolean canPlaceOnAddToUnhandled = this.canPlaceOnPredicates != null && !this.canPlaceOnPredicates.isEmpty();
         if (canPlaceOnAddToUnhandled) {
-            this.unhandledTags.set(DataComponents.CAN_PLACE_ON, new net.minecraft.world.item.AdventureModePredicate(this.canPlaceOnPredicates, !this.hasItemFlag(ItemFlag.HIDE_PLACED_ON)));
+            this.unhandledTags.set(DataComponents.CAN_PLACE_ON, new net.minecraft.world.item.AdventureModePredicate(this.canPlaceOnPredicates));
         }
-        // Paper end
+
         if (!this.unhandledTags.isEmpty()) {
-            net.minecraft.nbt.Tag unhandled = DataComponentPatch.CODEC.encodeStart(MinecraftServer.getDefaultRegistryAccess().createSerializationContext(NbtOps.INSTANCE), this.unhandledTags.build()).getOrThrow(IllegalStateException::new);
+            net.minecraft.nbt.Tag unhandled = DataComponentPatch.CODEC.encodeStart(CraftRegistry.getMinecraftRegistry().createSerializationContext(NbtOps.INSTANCE), this.unhandledTags.build()).getOrThrow(IllegalStateException::new);
             try {
                 ByteArrayOutputStream buf = new ByteArrayOutputStream();
                 NbtIo.writeCompressed((CompoundTag) unhandled, buf);
@@ -2282,14 +2261,13 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
                 Logger.getLogger(CraftMetaItem.class.getName()).log(Level.SEVERE, null, ex);
             }
         }
-        // Paper start
+
         if (canBreakAddToUnhandled) {
             this.unhandledTags.clear(DataComponents.CAN_BREAK);
         }
         if (canPlaceOnAddToUnhandled) {
             this.unhandledTags.clear(DataComponents.CAN_PLACE_ON);
         }
-        // Paper end
 
         if (!this.removedTags.isEmpty()) {
             RegistryAccess registryAccess = CraftRegistry.getMinecraftRegistry();
@@ -2339,7 +2317,7 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
     }
 
     static void serializeModifiers(Multimap<Attribute, AttributeModifier> modifiers, ImmutableMap.Builder<String, Object> builder, ItemMetaKey key) {
-        if (modifiers == null/* || modifiers.isEmpty()*/) { // Paper - null and an empty map have different behaviors
+        if (modifiers == null) { // null and an empty map have different behaviors
             return;
         }
 
@@ -2363,12 +2341,9 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
         }
 
         for (Object object : addFrom) {
-            // Paper start - support components
             if (object instanceof net.md_5.bungee.api.chat.BaseComponent[] baseComponentArr) {
                 addTo.add(CraftChatMessage.fromJSON(net.md_5.bungee.chat.ComponentSerializer.toString(baseComponentArr)));
-            } else
-            // Paper end
-            if (!(object instanceof String)) {
+            } else if (!(object instanceof String)) {
                 if (object != null) {
                     // SPIGOT-7399: Null check via if is important,
                     // otherwise object.getClass().getName() could throw an error for a valid argument -> when it is null which is valid,
@@ -2430,8 +2405,7 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
         CraftMetaItem.BLOCK_DATA.TYPE,
         CraftMetaItem.REPAIR.TYPE,
         CraftMetaItem.ENCHANTMENTS.TYPE,
-        CraftMetaItem.HIDE_ADDITIONAL_TOOLTIP.TYPE,
-        CraftMetaItem.HIDE_TOOLTIP.TYPE,
+        CraftMetaItem.TOOLTIP_DISPLAY.TYPE,
         CraftMetaItem.TOOLTIP_STYLE.TYPE,
         CraftMetaItem.ITEM_MODEL.TYPE,
         CraftMetaItem.UNBREAKABLE.TYPE,
@@ -2450,8 +2424,8 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
         CraftMetaItem.MAX_DAMAGE.TYPE,
         CraftMetaItem.CUSTOM_DATA.TYPE,
         CraftMetaItem.ATTRIBUTES.TYPE,
-        CraftMetaItem.CAN_PLACE_ON.TYPE, // Paper
-        CraftMetaItem.CAN_BREAK.TYPE // Paper
+        CraftMetaItem.CAN_PLACE_ON.TYPE,
+        CraftMetaItem.CAN_BREAK.TYPE
     );
     public static Set<DataComponentType<?>> getTopLevelHandledDcts(final Class<? extends CraftMetaItem> clazz) {
         synchronized (HANDLED_DCTS_PER_TYPE) {
@@ -2497,17 +2471,14 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
     // Paper end - improve checking handled data component types
 
     protected static <T> Optional<? extends T> getOrEmpty(DataComponentPatch tag, ItemMetaKeyType<T> type) {
-        // Paper start
         return getOrEmpty(tag, type.TYPE);
     }
+
     protected static <T> Optional<? extends T> getOrEmpty(final DataComponentPatch tag, final DataComponentType<T> type) {
         Optional<? extends T> result = tag.get(type);
-        // Paper end
-
         return (result != null) ? result : Optional.empty();
     }
 
-    // Paper start
     private static class EnchantmentMap extends java.util.TreeMap<org.bukkit.enchantments.Enchantment, Integer> {
         private EnchantmentMap(Map<Enchantment, Integer> enchantments) {
             this();
@@ -2522,9 +2493,7 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
             return (EnchantmentMap) super.clone();
         }
     }
-    // Paper end
 
-    // Paper start - Add an API for can-place-on/can-break adventure mode predicates
     @Override
     public Set<Material> getCanDestroy() {
         return !this.hasDestroyableKeys() ? Collections.emptySet() : convertToLegacyMaterial(this.canBreakPredicates);
@@ -2548,7 +2517,7 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
     }
 
     private static List<net.minecraft.advancements.critereon.BlockPredicate> convertFromLegacyMaterial(final Collection<Material> materials) {
-        final net.minecraft.core.Registry<net.minecraft.world.level.block.Block> blockRegistry = net.minecraft.server.MinecraftServer.getServer().registryAccess().lookupOrThrow(net.minecraft.core.registries.Registries.BLOCK);
+        final net.minecraft.core.Registry<net.minecraft.world.level.block.Block> blockRegistry = CraftRegistry.getMinecraftRegistry().lookupOrThrow(net.minecraft.core.registries.Registries.BLOCK);
         return materials.stream().map(m -> {
             return net.minecraft.advancements.critereon.BlockPredicate.Builder.block().of(blockRegistry, CraftBlockType.bukkitToMinecraft(m)).build();
         }).toList();
@@ -2587,7 +2556,7 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
 
     private static List<net.minecraft.advancements.critereon.BlockPredicate> convertFromLegacyNamespaced(final Collection<com.destroystokyo.paper.Namespaced> namespaceds) {
         final List<net.minecraft.advancements.critereon.BlockPredicate> predicates = new ArrayList<>();
-        final net.minecraft.core.Registry<net.minecraft.world.level.block.Block> blockRegistry = net.minecraft.server.MinecraftServer.getServer().registryAccess().lookupOrThrow(net.minecraft.core.registries.Registries.BLOCK);
+        final net.minecraft.core.Registry<net.minecraft.world.level.block.Block> blockRegistry = CraftRegistry.getMinecraftRegistry().lookupOrThrow(net.minecraft.core.registries.Registries.BLOCK);
         for (final com.destroystokyo.paper.Namespaced namespaced : namespaceds) {
             if (namespaced instanceof final org.bukkit.NamespacedKey key) {
                 predicates.add(net.minecraft.advancements.critereon.BlockPredicate.Builder.block().of(blockRegistry, CraftBlockType.bukkitToMinecraft(Objects.requireNonNull(org.bukkit.Registry.MATERIAL.get(key)))).build());
@@ -2638,5 +2607,4 @@ class CraftMetaItem implements ItemMeta, Damageable, Repairable, BlockDataMeta {
 
         return true;
     }
-    // Paper end - Add an API for can-place-on/can-break adventure mode predicates
 }
